# rustcast

./: CONTRIBUTING.md  Cargo.toml  EXTENSIONS.md  FEATURES.md  README.md  build.rs  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yml  merges.yml  release.yml
bundling/: Info.plist  entitlements.plist
debian/: changelog  control  rules
docs/: config.toml  default.toml  icon.icns  index.html  styles.css
scripts/: package-macos.sh  sign-macos-broken.sh  sign-macos.sh
src/: app.rs  app_finding.rs  calculator.rs  clipboard.rs  commands.rs  config.rs  database.rs  debounce.rs  haptics.rs  icon.rs  macos.rs  main.rs  quit.rs  styles.rs  unit_conversion.rs  utils.rs  windows.rs
src/app/: apps.rs  menubar.rs  pages.rs  tile.rs
src/app/pages/: clipboard.rs  emoji.rs  prelude.rs  settings.rs
src/app/tile/: elm.rs  mod.rs  recent_actions.rs  search_query.rs  update.rs
src/app_finding/: linux.rs  macos.rs  mod.rs  windows.rs
src/config/: include_patterns.rs  mod.rs  patterns.rs
src/cross_platform/: linux.rs  mod.rs  windows.rs
src/cross_platform/macos/: haptics.rs  mod.rs
src/cross_platform/windows/: app_finding.rs  appicon.rs  extract_appicons.rs  mod.rs
src/platform/: cross.rs  mod.rs
src/platform/macos/: clipboard.rs  discovery.rs  haptics.rs  launching.rs  mod.rs
src/unit_conversion/: defs.rs  mod.rs
