[package]
name = "rustcast"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Foundation", 
    "Win32_Graphics_Gdi", 
    "Win32_System_Com", 
    "Win32_UI_Shell",
    "Win32_Globalization"
]}

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSImage"] }
objc2-application-services = { version = "0.3.2", default-features = false, features = [
    "HIServices",
    "Processes",
] }
objc2-core-foundation = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
icns = "0.3.1"

[dependencies]
anyhow = "1.0.100"
emojis = "0.8.0"
arboard = "3.6.1"
global-hotkey = "0.7.0"
iced = { version = "0.14.0", features = ["image", "tokio"] }
image = "0.25.9"
once_cell = "1.21.3"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
walkdir = "2"
tray-icon = "0.21.3"
url = "2.5.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
glob = "0.3.3"
open = "5.3.3"
regex = "1.12.2"
lnk = "0.6.3"
codepage = "0.1.2"
widestring = "1.2.1"

[package.metadata.bundle]
name = "RustCast"
identifier = "com.umangsurana.rustcast"
icon = ["bundling/icon.icns"]
version = "1.0.0"
resources = []
copyright = "Copyright Umang Surana (c) 2025"
category = "Developer Tool"
short_description = "An open source alternative to Raycast, and in rust"
osx_minimum_system_version = "10.15"

[package.metadata.bundle.osx]
info_plist_path = "bundling/Info.plist"

[package.metadata.bundle.osx.info]
LSUIElement = true
NSHighResolutionCapable = true
